tests/fixtures/invalid/arrow_aggregate_pointer_field_index_address_out_of_bounds.c
struct Point {
    int x;
};

struct Cursor {
    struct Point *points;
};

int main(void) {
    struct Point points[2] = {{1}, {2}};
    struct Cursor cursor = {points};
    struct Cursor *view = &cursor;
    struct Point *outside = &view->points[2];
    return outside->x;
}
